--- a/stdm/ui/ui_db_profile_backup.ui
+++ b/stdm/ui/ui_db_profile_backup.ui
@@ -229,7 +229,7 @@
         <number>0</number>
        </property>
        <property name="textVisible">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
       </widget>
      </item>
